welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: Missing closing brace `}' assumed here
 for (compteur <- 1 to 9) { 
 ^Runner:11: error: Missing closing brace `}' assumed here
	}
        ^